--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             </div>
             <div class="inner-container">
                 <header class="quiz-home">
+                    <h1>Coding Quiz Challenge</h1>
+                    <button>Start Quiz!</button>
 
                 </header>
                 <main>
