--- a/index.html
+++ b/index.html
@@ -21,6 +21,54 @@
 
                 </header>
                 <main>
+                    <section class="questions-screen">
+                        <h2>Questions</h2>
+                        <div id="question">What is the answer to this question?</div>
+                        <div class="choice-container">
+                            <p class="choice-prefix">A</p>
+                            <p class="choice-text" data-number="1">Choice</p>
+                        </div>
+
+                        <div class="choice-container">
+                            <p class="choice-prefix"><B></B></p>
+                            <p class="choice-text" data-number="2">Choice 2</p>
+                        </div>
+
+                        <div class="choice-container">
+                            <p class="choice-prefix">C</p>
+                            <p class="choice-text" data-number="3">Choice 3</p>
+                        </div>
+
+                        <div class="choice-container">
+                            <p class="choice-prefix">D</p>
+                            <p class="choice-text" data-number="4">Choice 4</p>
+                        </div>
+
+
+                    </section>
+                    <section class="quiz-finish">
+                        <h2>Quiz Finished!</h2>
+                        <p>Your Score: 00</p>
+                        <div>
+                            <label for="">Enter Initials</label>
+                            <input type="text">
+                            <button>Submit</button>
+                        </div>
+                    </section>
+
+                    <section class="highscores-screen">
+                        <h2>Highscores</h2>
+                        <ol>
+                            
+                        </ol>
+                        <button id="go-back">Back</button>
+                        <button id="clear-score">Clear</button>
+
+                    </section>
+
+                    <script src="./assets/js/script.js"></script>
+
+
 
                 </main>
 
